welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: '<-' expected but ')' found.
	for (i>0 to 5) {
                     ^Program:23: error: illegal start of simple expression
}
^